[build-system]
requires = ["setuptools >= 61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lektorlib"
dynamic = ["version", "readme"]
description = "A few bits which are potentially useful to developers of Lektor plugins"
urls.Home = "https://github.com/dairiki/lektorlib"
keywords = ["Lektor", "utilities"]
license.file = "LICENSE"
authors = [
    {name = "Jeff Dairiki", email = "dairiki@dairiki.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Lektor",
    "Environment :: Plugins",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
readme.file = ["README.md", "CHANGES.md"]
readme.content-type = "text/markdown"

[tool.setuptools_scm]
