[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lektorlib"
dynamic = ["version", "readme"]
description = "A few bits which are potentially useful to developers of Lektor plugins"
urls.Home = "https://github.com/dairiki/lektorlib"
keywords = ["Lektor", "utilities"]
license.file = "LICENSE"
authors = [
    {name = "Jeff Dairiki", email = "dairiki@dairiki.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Lektor",
    "Environment :: Plugins",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.7"

[tool.pdm.version]
source = "scm"


[tool.pdm.build]
excludes = [
    "**/*~",
    ".*",
]
source-includes = [
    "CHANGES.md",
    "README.md",
    "tox.ini",
    "tests/*.py",
    "tests/test-site/*.lektorproject",
    "tests/test-site/**/*.css",
    "tests/test-site/**/*.html",
    "tests/test-site/**/*.ini",
    "tests/test-site/content/**/*.lr",
]

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "flake8-bugbear>=23.3.12",
    "mypy~=1.3",
    "lektor",
]
test = [
    "pytest>=7.3.1",
    "pytest-cov",
]

[tool.pdm.scripts]
tests = "pytest --cov=lektorlib --cov-fail-under=100 tests"

[tool.coverage.run]
source_pkgs = ["lektorlib"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    '^\s*\.\.\.\s*$',
    '^\s*raise\s+NotImplementedError\(\)\s*$',
    '^(el)?if TYPE_CHECKING:\s*',
]

[tool.mypy]
packages = ["lektorlib"]
strict = true

[[tool.mypy.overrides]]
module = [
    "lektor.*",
]
ignore_missing_imports = true
