[metadata]
name = lektorlib
description = A few bits which are potentially useful to developers of Lektor plugins
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = Lektor utilities
license = MIT
url = https://github.com/dairiki/lektorlib
author = Jeff Dairiki
author_email = dairiki@dairiki.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Lektor
    Environment :: Plugins
    Topic :: Software Development :: Libraries

[options]
packages = lektorlib
